fix(styles): increase fontsize for task time in dark mode

--- a/examples/tapme/styles.css
+++ b/examples/tapme/styles.css
@@ -368,6 +368,7 @@ body:has(.page--dark) input, body:has(.page--dark) textarea {
     margin-left: -135px;
     width: 135px;
     text-align: center;
+    font-size: 20px;
 }
 
 .toggle-button__container:has(input[checked]) > div:first-child {
